Added commandBar for "Dateitransfer" - page

--- a/Cyberduck/Cyberduck/Views/VerlaufPage.xaml
+++ b/Cyberduck/Cyberduck/Views/VerlaufPage.xaml
@@ -51,6 +51,7 @@
                     </SplitButton>
                 </AppBarElementContainer>
 
+                <AppBarSeparator/>
 
                 <AppBarButton IsEnabled="False">
                     <AppBarButton.Icon>
