--- a/Cyberduck/Cyberduck/Views/DateitransfersPage.xaml
+++ b/Cyberduck/Cyberduck/Views/DateitransfersPage.xaml
@@ -7,6 +7,217 @@
     mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
-        
+        <Grid x:Name="CommandBar">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <CommandBar Grid.Column="0" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right">
+                <!-- Left side -->
+                <AppBarElementContainer>
+                    <SplitButton>
+                        Aktion
+                        <SplitButton.Flyout>
+                            <MenuFlyout>
+                                <MenuFlyoutItem Text="Eintrag löschen" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE74D;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutItem Text="Info anzeigen" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE946;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutSeparator/>
+
+                                <MenuFlyoutItem Text="Dateitransfer fortsetzen" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE768;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutItem Text="Dateitransfer pausieren" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE769;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutItem Text="Dateitransfer neu laden" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE72C;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutSeparator/>
+
+                                <MenuFlyoutSubItem Text="Anzahl Verbindungen">
+                                    <MenuFlyoutSubItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xF0B9;"/>
+                                    </MenuFlyoutSubItem.Icon>
+                                    <ToggleMenuFlyoutItem Text="Automatisch" Tag="Auto" IsChecked="True" Click="ConnectionMenuItem_Click" />
+                                        <MenuFlyoutSeparator/>
+                                        <ToggleMenuFlyoutItem Text="1 Verbindung" Click="ConnectionMenuItem_Click" />
+                                        <ToggleMenuFlyoutItem Text="2 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="3 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="4 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="5 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="10 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="15 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                        <ToggleMenuFlyoutItem Text="20 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                </MenuFlyoutSubItem>
+
+                                <MenuFlyoutSubItem Text="Bandbreite" IsEnabled="False">
+                                    <MenuFlyoutSubItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEC4A;"/>
+                                    </MenuFlyoutSubItem.Icon>
+                                    <ToggleMenuFlyoutItem Text="Unlimitierte Bandbreite" Tag="Unlimited" IsChecked="True" Click="BandwithMenuItem_Click" />
+                                    <MenuFlyoutSeparator/>
+                                    <ToggleMenuFlyoutItem Text="5 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="10 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="20 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="50 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="100 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="150 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="200 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="500 KB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="1 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="2 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="5 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="10 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="15 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="20 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="50 MB/s" Click="BandwithMenuItem_Click" />
+                                    <ToggleMenuFlyoutItem Text="100 MB/s" Click="BandwithMenuItem_Click" />
+                                </MenuFlyoutSubItem>
+
+                                <MenuFlyoutSeparator/>
+
+                                <MenuFlyoutItem Text="Datei öffnen" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE838;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+
+                                <MenuFlyoutItem Text="Datei im Explorer anzeigen" IsEnabled="False">
+                                    <MenuFlyoutItem.Icon>
+                                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEC50;"/>
+                                    </MenuFlyoutItem.Icon>
+                                </MenuFlyoutItem>
+                            </MenuFlyout>
+                        </SplitButton.Flyout>
+                    </SplitButton>
+                </AppBarElementContainer>
+
+                <AppBarSeparator/>
+
+                <AppBarButton IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE74D;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+                <AppBarButton IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE946;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+                <AppBarSeparator/>
+
+                <AppBarButton IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE768;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+                <AppBarButton IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE769;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+                <AppBarButton IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE72C;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+            </CommandBar>
+
+            <CommandBar Grid.Column="2" Background="Transparent" IsOpen="False" DefaultLabelPosition="Right">
+                <!-- Right side -->
+                <AppBarElementContainer>
+                    <SplitButton x:Name="connectionSplitButton">
+                        <SplitButton.Content>
+                            <TextBlock x:Name="selectedConnectionMenuItemText" Text="Automatisch"/>
+                        </SplitButton.Content>
+                        <SplitButton.Flyout>
+                            <MenuFlyout x:Name="connectionMenuFlyout">
+                                <ToggleMenuFlyoutItem Text="Automatisch" Tag="Auto" IsChecked="True" Click="ConnectionMenuItem_Click" />
+                                <MenuFlyoutSeparator/>
+                                <ToggleMenuFlyoutItem Text="1 Verbindung" Click="ConnectionMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="2 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="3 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="4 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="5 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="10 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="15 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                                <ToggleMenuFlyoutItem Text="20 Verbindungen" Click="ConnectionMenuItem_Click"/>
+                            </MenuFlyout>
+                        </SplitButton.Flyout>
+                    </SplitButton>
+                </AppBarElementContainer>
+
+                <AppBarElementContainer>
+                    <SplitButton x:Name="bandwithSplitButton" IsEnabled="False">
+                        <SplitButton.Content>
+                            <TextBlock x:Name="selectedBandwidthMenuItemText" Text="Unlimitierte Bandbreite"/>
+                        </SplitButton.Content>
+                        <SplitButton.Flyout>
+                            <MenuFlyout x:Name="bandwithMenuFlyout">
+                                <ToggleMenuFlyoutItem Text="Unlimitierte Bandbreite" Tag="Unlimited" IsChecked="True" Click="BandwithMenuItem_Click" />
+                                <MenuFlyoutSeparator/>
+                                <ToggleMenuFlyoutItem Text="5 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="10 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="20 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="50 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="100 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="150 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="200 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="500 KB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="1 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="2 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="5 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="10 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="15 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="20 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="50 MB/s" Click="BandwithMenuItem_Click" />
+                                <ToggleMenuFlyoutItem Text="100 MB/s" Click="BandwithMenuItem_Click" />
+                            </MenuFlyout>
+                        </SplitButton.Flyout>
+                    </SplitButton>
+                </AppBarElementContainer>
+
+                <AppBarSeparator/>
+
+                <AppBarButton Label="Öffnen" IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE838;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+
+                <AppBarButton Label="Zeigen" IsEnabled="False">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEC50;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+
+            </CommandBar>
+        </Grid>
     </Grid>
 </Page>
