--- a/Cyberduck/Cyberduck/Views/ShellPage.xaml
+++ b/Cyberduck/Cyberduck/Views/ShellPage.xaml
@@ -458,7 +458,8 @@
             IsSettingsVisible="True"
             Grid.Row="2"
             ExpandedModeThresholdWidth="1280"
-            DisplayModeChanged="NavigationViewControl_DisplayModeChanged">
+            DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
+            SelectionChanged="NavigationView_SelectionChanged">
 
             <NavigationView.MenuItems>
                 <NavigationViewItem x:Uid="Shell_Lesezeichen" helpers:NavigationHelper.NavigateTo="Cyberduck.ViewModels.LesezeichenViewModel">
@@ -466,21 +467,34 @@
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE8A4;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                
                 <NavigationViewItem x:Uid="Shell_Verlauf" helpers:NavigationHelper.NavigateTo="Cyberduck.ViewModels.VerlaufViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE81C;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+                
                 <NavigationViewItem x:Uid="Shell_Bonjour" helpers:NavigationHelper.NavigateTo="Cyberduck.ViewModels.BonjourViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xF22C;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+
                 <NavigationViewItem x:Uid="Shell_Dateitransfers" helpers:NavigationHelper.NavigateTo="Cyberduck.ViewModels.DateitransfersViewModel">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE8CB;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
+
+                <NavigationViewItemSeparator/>
+
+                <NavigationViewItem x:Name="NewConnectionNavItem">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE836;"/>
+                    </NavigationViewItem.Icon>
+                    <TextBlock>Neue Verbindung erstellen</TextBlock>
+                </NavigationViewItem>
+
             </NavigationView.MenuItems>
             <Frame x:Name="NavigationFrame" />
         </NavigationView>
