--- a/Cyberduck/Cyberduck/Views/VerlaufPage.xaml
+++ b/Cyberduck/Cyberduck/Views/VerlaufPage.xaml
@@ -4,10 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:System="using:System"
     mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
-        <Grid x:Name="CommandBar">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid x:Name="CommandBar" Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
@@ -69,5 +74,87 @@
                 </AppBarButton>
             </CommandBar>
         </Grid>
+        <StackPanel x:Name="VerlaufContent" Grid.Row="1" Margin="48" Spacing="8">
+            <Grid
+                    x:Name="VerlaufItem"
+                    CornerRadius="4"
+                    Padding="16"
+                    ColumnSpacing="16"
+                    BorderThickness="1"
+                    Height="Auto"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Icon -->
+                <StackPanel Grid.Column="0" VerticalAlignment="Center">
+                    <FontIcon Glyph="&#xEDA2;"/>
+                </StackPanel>
+
+                <!-- Connection Description -->
+                <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="0 0 50 0">
+                    <TextBlock Text="Legacy"
+                               FontSize="14"
+                               TextWrapping="NoWrap"
+                               Margin="0 0 0 4"/>
+
+                    <TextBlock Text="onedrive.live.com/privat"
+                               FontSize="12"
+                               TextWrapping="NoWrap"
+                               Foreground="Gray"/>
+
+                    <TextBlock Text="johndoe"
+                               FontSize="12"
+                               TextWrapping="NoWrap"
+                               Foreground="Gray"/>
+
+                </StackPanel>
+
+                <!-- Tag -->
+                <Grid x:Name="Tag" Grid.Column="2" VerticalAlignment="Center" ColumnSpacing="8">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Border Grid.Column="0" BorderThickness="1" BorderBrush="#f3a43d" Background="Transparent" CornerRadius="14" Padding="12 0 12 0">
+                        <Grid ColumnSpacing="4">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <FontIcon Grid.Column="0" Glyph="&#xE8EC;" FontSize="14" Foreground="#f3a43d"/>
+                            <TextBlock Grid.Column="1" Text="Arbeit" FontSize="14" TextWrapping="NoWrap" Foreground="Gray" Padding="4" />
+                        </Grid>
+                    </Border>
+                </Grid>
+
+                <!-- Modification Date -->
+                <StackPanel Grid.Column="3" VerticalAlignment="Center">
+                    <TextBlock
+                           Text="{x:Bind CurrentDateTime, Mode=OneWay}"
+                           FontSize="14"
+                           TextWrapping="NoWrap"/>
+                </StackPanel>
+
+            </Grid>
+        </StackPanel>
     </Grid>
+
 </Page>
+
+
+
+
+
+
+
+
+
+
