--- a/Cyberduck/Cyberduck/Views/HistoryPage/HistoryPage.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/HistoryPage.xaml
@@ -16,20 +16,10 @@
         <!-- Command Bar -->
         <local:CommandBar></local:CommandBar>
 
-        <StackPanel x:Name="VerlaufContent" Grid.Row="1" Margin="48" Spacing="8">
+        <StackPanel x:Name="HistoryContent" Grid.Row="1" Margin="48" Spacing="8">
 
             <local:HistoryItem></local:HistoryItem>
 
         </StackPanel>
     </Grid>
 </Page>
-
-
-
-
-
-
-
-
-
-
