added margin to settings page

--- a/Cyberduck/Cyberduck/Views/SettingsPage/SettingsPage.xaml
+++ b/Cyberduck/Cyberduck/Views/SettingsPage/SettingsPage.xaml
@@ -10,7 +10,7 @@
     <Page.Resources>
         <helpers:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
     </Page.Resources>
-    <Grid>
+    <Grid Margin="48">
         <StackPanel
             x:Name="ContentArea">
             <TextBlock x:Uid="Settings_Personalization" Style="{ThemeResource SubtitleTextBlockStyle}" />
