--- a/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItem.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItem.xaml
@@ -5,17 +5,11 @@
     xmlns:local="using:Cyberduck.Views.HistoryPage.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewmodels="using:Cyberduck.ViewModels"
-    d:DataContext="{d:DesignInstance Type=viewmodels:HistoryViewModel}"
     mc:Ignorable="d">
 
     <UserControl.Resources>
         <local:IconConverter x:Key="IconConverter" />
     </UserControl.Resources>
-
-    <UserControl.DataContext>
-        <viewmodels:HistoryViewModel />
-    </UserControl.DataContext>
 
     <Grid
         CornerRadius="4"
@@ -33,13 +27,14 @@
         </Grid.ColumnDefinitions>
 
         <!-- Icon -->
+        <!-- TODO Fix Binding issue! -->
         <StackPanel Grid.Column="0" VerticalAlignment="Center">
             <FontIcon Glyph="{Binding Icon, Converter={StaticResource IconConverter}}" />
         </StackPanel>
 
         <!-- Connection Description -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="0 0 50 0">
-            <TextBlock Text="Legacy" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
+            <TextBlock Text="{Binding Name}" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
             <TextBlock Text="onedrive.live.com/privat" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
             <TextBlock Text="johndoe" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
         </StackPanel>
