--- a/Cyberduck/Cyberduck/Views/HistoryPage/HistoryPage.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/HistoryPage.xaml
@@ -4,9 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:Cyberduck.Views.HistoryPage.Components" xmlns:local1="using:Cyberduck.Views"
-    xmlns:viewmodels="using:Cyberduck.ViewModels"
-    d:DataContext="{d:DesignInstance Type=viewmodels:HistoryViewModel}"
+    xmlns:local="using:Cyberduck.Views.HistoryPage.Components"
     mc:Ignorable="d">
 
     <Grid x:Name="ContentArea">
@@ -43,7 +41,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border Margin="48 0 48 8">
-                        <local:HistoryItem Icon="{Binding Icon}" />
+                        <local:HistoryItem />
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
