--- a/Cyberduck/Cyberduck/Styles/Thickness.xaml
+++ b/Cyberduck/Cyberduck/Styles/Thickness.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Thickness x:Key="LargeTopMargin">0,36,0,0</Thickness>
+    <Thickness x:Key="LargeBottomMargin">0, 0,0,36</Thickness>
     <Thickness x:Key="LargeTopBottomMargin">0,36,0,36</Thickness>
 
     <Thickness x:Key="MediumTopMargin">0,24,0,0</Thickness>
@@ -14,6 +15,7 @@
     <Thickness x:Key="SmallLeftRightMargin">12,0,12,0</Thickness>
     <Thickness x:Key="SmallTopMargin">0,12,0,0</Thickness>
     <Thickness x:Key="SmallRightMargin">0,0,12,0</Thickness>
+    <Thickness x:Key="SmallBottomMargin">0,0,0,12</Thickness>
     <Thickness x:Key="SmallTopBottomMargin">0,12,0,12</Thickness>
 
     <Thickness x:Key="XSmallLeftMargin">8,0,0,0</Thickness>
