--- a/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItemTag.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItemTag.xaml
@@ -5,7 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:Cyberduck.Core.Models"
     mc:Ignorable="d">
+
+    <UserControl.DataContext>
+        <local:Tag />
+    </UserControl.DataContext>
 
     <Grid VerticalAlignment="Center" ColumnSpacing="8">
         <Grid.ColumnDefinitions>
@@ -13,15 +18,15 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0" BorderThickness="1" BorderBrush="#f3a43d" Background="Transparent" CornerRadius="14" Padding="12 0 12 0">
+        <Border Grid.Column="0" BorderThickness="1" BorderBrush="{Binding Color}" Background="Transparent" CornerRadius="14" Padding="12 0 12 0">
             <Grid ColumnSpacing="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <FontIcon Grid.Column="0" Glyph="&#xE8EC;" FontSize="14" Foreground="#f3a43d"/>
-                <TextBlock Grid.Column="1" Text="Arbeit" FontSize="14" TextWrapping="NoWrap" Foreground="Gray" Padding="4" />
+                <FontIcon Grid.Column="0" Glyph="&#xE8EC;" FontSize="14" Foreground="{Binding Color}"/>
+                <TextBlock Grid.Column="1" Text="{Binding Tagname}" FontSize="14" TextWrapping="NoWrap" Foreground="Gray" Padding="4" />
             </Grid>
         </Border>
     </Grid>
